@@ -51,7 +51,7 @@ public class SteamLiquidBoilerMachine extends SteamBoilerMachine {
             return recipeLogic.getRecipeManager().getAllRecipesFor(getRecipeType()).stream().anyMatch(recipe -> {
                 var list = recipe.value().inputs.getOrDefault(FluidRecipeCapability.CAP, Collections.emptyList());
                 if (!list.isEmpty()) {
-                    return Arrays.stream(FluidRecipeCapability.CAP.of(list.get(0).content).getFluids())
+                    return Arrays.stream(FluidRecipeCapability.CAP.of(list.getFirst().content).getFluids())
                             .anyMatch(stack -> stack.getFluid() == f);
                 }
                 return false;
